--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 
     <string name="saved_videos_path">/data/data/com.hz_apps.timebasedlocker/files/videos/</string>
     <string name="saved_photos_path">/data/data/com.hz_apps.timebasedlocker/files/photos/</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
