--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="file_delete_alert_message">This file will be deleted permanently. You cannot recover this later.</string>
+    <string name="file_delete_alert_message">The following files will be deleted permanently.</string>
     <string name="delete">Delete</string>
 </resources>
