--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="file_delete_alert_message">The following files will be deleted permanently.</string>
     <string name="delete">Delete</string>
+
+    <string name="set_time">SET TIME</string>
+    <string name="set_date">SET DATE</string>
 </resources>
